// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider handleGenerator should match snapshot 1`] = `
<Handle
  value={3}
/>
`;

exports[`RangeSlider should match snapshot 1`] = `
<div
  className="RangeSlider ljVsAN"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="RangeSlider-rail fIZwol"
  />
  <Track
    className="RangeSlider-track"
    disabled={false}
    length={100}
    offset={0}
  />
  <Handle
    className="RangeSlider-handle RangeSlider-handle-1"
    disabled={false}
    max={100}
    min={0}
    offset={0}
    value={0}
  />
  <Handle
    className="RangeSlider-handle RangeSlider-handle-2"
    disabled={false}
    max={100}
    min={0}
    offset={100}
    value={100}
  />
</div>
`;

exports[`RangeSlider should match snapshot when disabled 1`] = `
<div
  className="RangeSlider RangeSlider-disabled disabled ljVsAN"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="RangeSlider-rail fIZwol"
  />
  <Track
    className="RangeSlider-track"
    disabled={true}
    length={100}
    offset={0}
  />
  <Handle
    className="RangeSlider-handle RangeSlider-handle-1"
    disabled={true}
    max={100}
    min={0}
    offset={0}
    value={0}
  />
  <Handle
    className="RangeSlider-handle RangeSlider-handle-2"
    disabled={true}
    max={100}
    min={0}
    offset={100}
    value={100}
  />
</div>
`;

exports[`RangeSlider should match snapshot when min and max are matching 1`] = `
<div
  className="RangeSlider ljVsAN"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="RangeSlider-rail fIZwol"
  />
  <Track
    className="RangeSlider-track"
    disabled={false}
    length={NaN}
    offset={NaN}
  />
  <Handle
    className="RangeSlider-handle RangeSlider-handle-1"
    disabled={false}
    max={0}
    min={0}
    offset={NaN}
    value={0}
  />
  <Handle
    className="RangeSlider-handle RangeSlider-handle-2"
    disabled={false}
    max={0}
    min={0}
    offset={NaN}
    value={0}
  />
</div>
`;
